[repository/downloader] Replace URL with URI in Downloader
Progress on https://github.com/bazelbuild/bazel/issues/15856