@@ -45,6 +45,7 @@ import java.net.Proxy;
 import java.net.ServerSocket;
 import java.net.Socket;
 import java.net.SocketTimeoutException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.List;
@@ -96,7 +97,7 @@ public class HttpConnectorTest {
 
   @Before
   public void before() throws Exception {
-    when(proxyHelper.createProxyIfNeeded(any(URL.class))).thenReturn(Proxy.NO_PROXY);
+    when(proxyHelper.createProxyIfNeeded(any(URI.class))).thenReturn(Proxy.NO_PROXY);
   }
 
   @After
@@ -110,7 +111,7 @@ public class HttpConnectorTest {
     assertThat(
             ByteStreams.toByteArray(
                 connector
-                    .connect(createTempFile(fileContents).toURI().toURL(), url -> ImmutableMap.of())
+                    .connect(createTempFile(fileContents).toURI(), url -> ImmutableMap.of())
                     .getInputStream()))
         .isEqualTo(fileContents);
   }
@@ -119,7 +120,7 @@ public class HttpConnectorTest {
   public void badHost_throwsIOException() throws Exception {
     thrown.expect(IOException.class);
     thrown.expectMessage("Unknown host: bad.example");
-    connector.connect(new URL("http://bad.example"), url -> ImmutableMap.of());
+    connector.connect(URI.create("http://bad.example"), url -> ImmutableMap.of());
   }
 
   @Test
@@ -151,7 +152,7 @@ public class HttpConnectorTest {
           new InputStreamReader(
               connector
                   .connect(
-                      new URL(String.format("http://localhost:%d/boo", server.getLocalPort())),
+                      URI.create(String.format("http://localhost:%d/boo", server.getLocalPort())),
                       url -> ImmutableMap.of("Content-Encoding", ImmutableList.of("gzip")))
                   .getInputStream(),
               ISO_8859_1)) {
@@ -203,7 +204,7 @@ public class HttpConnectorTest {
           new InputStreamReader(
               connector
                   .connect(
-                      new URL(String.format("http://localhost:%d", server.getLocalPort())),
+                      URI.create(String.format("http://localhost:%d", server.getLocalPort())),
                       url -> ImmutableMap.of())
                   .getInputStream(),
               ISO_8859_1)) {
@@ -262,7 +263,7 @@ public class HttpConnectorTest {
           new InputStreamReader(
               connector
                   .connect(
-                      new URL(String.format("http://localhost:%d", port)), url -> ImmutableMap.of())
+                      URI.create(String.format("http://localhost:%d", port)), url -> ImmutableMap.of())
                   .getInputStream(),
               ISO_8859_1)) {
         assertThat(CharStreams.toString(payload)).isEqualTo("hello");
@@ -321,7 +322,7 @@ public class HttpConnectorTest {
           new InputStreamReader(
               connector
                   .connect(
-                      new URL(String.format("http://localhost:%d", server.getLocalPort())),
+                      URI.create(String.format("http://localhost:%d", server.getLocalPort())),
                       url -> ImmutableMap.of())
                   .getInputStream(),
               ISO_8859_1)) {
@@ -354,7 +355,7 @@ public class HttpConnectorTest {
           new InputStreamReader(
               connector
                   .connect(
-                      new URL(String.format("http://localhost:%d", server.getLocalPort())),
+                      URI.create(String.format("http://localhost:%d", server.getLocalPort())),
                       url -> ImmutableMap.of())
                   .getInputStream(),
               ISO_8859_1)) {
@@ -393,7 +394,7 @@ public class HttpConnectorTest {
       thrown.expect(IOException.class);
       thrown.expectMessage("401 Unauthorized");
       connector.connect(
-          new URL(String.format("http://localhost:%d", server.getLocalPort())),
+          URI.create(String.format("http://localhost:%d", server.getLocalPort())),
           url -> ImmutableMap.of());
     }
   }
@@ -425,7 +426,7 @@ public class HttpConnectorTest {
       thrown.expect(FileNotFoundException.class);
       thrown.expectMessage("404 Not Found");
       connector.connect(
-          new URL(String.format("http://localhost:%d", server.getLocalPort())),
+          URI.create(String.format("http://localhost:%d", server.getLocalPort())),
           url -> ImmutableMap.of());
     }
   }
@@ -460,7 +461,7 @@ public class HttpConnectorTest {
                 }
               });
       connector.connect(
-          new URL(String.format("http://localhost:%d", server.getLocalPort())),
+          URI.create(String.format("http://localhost:%d", server.getLocalPort())),
           url -> ImmutableMap.of());
       fail();
     } catch (IOException ignored) {
@@ -503,7 +504,7 @@ public class HttpConnectorTest {
       thrown.expectMessage("500 Oh My");
       try {
         connector.connect(
-            new URL(String.format("http://localhost:%d", server.getLocalPort())),
+            URI.create(String.format("http://localhost:%d", server.getLocalPort())),
             url -> ImmutableMap.of());
       } finally {
         assertThat(tries.get()).isGreaterThan(2);
@@ -542,7 +543,7 @@ public class HttpConnectorTest {
       thrown.expectMessage("403 Forbidden");
       try {
         connector.connect(
-            new URL(String.format("http://localhost:%d", server.getLocalPort())),
+            URI.create(String.format("http://localhost:%d", server.getLocalPort())),
             url -> ImmutableMap.of());
       } finally {
         assertThat(tries.get()).isGreaterThan(2);
@@ -613,7 +614,7 @@ public class HttpConnectorTest {
               });
       URLConnection connection =
           connector.connect(
-              new URL(String.format("http://localhost:%d", server.getLocalPort())),
+              URI.create(String.format("http://localhost:%d", server.getLocalPort())),
               url -> ImmutableMap.of());
       assertThat(connection.getURL()).isEqualTo(
           new URL(String.format("http://localhost:%d/doodle.tar.gz", server.getLocalPort())));
@@ -678,13 +679,13 @@ public class HttpConnectorTest {
               });
       // Header function that provides different auth headers for
       // the two servers.
-      Function<URL, ImmutableMap<String, List<String>>> authHeaders =
+      Function<URI, ImmutableMap<String, List<String>>> authHeaders =
           new Function<>() {
             @Override
-            public ImmutableMap<String, List<String>> apply(URL url) {
-              if (url.getPort() == server1.getLocalPort()) {
+            public ImmutableMap<String, List<String>> apply(URI uri) {
+              if (uri.getPort() == server1.getLocalPort()) {
                 return ImmutableMap.of("Authentication", ImmutableList.of(basic1));
-              } else if (url.getPort() == server2.getLocalPort()) {
+              } else if (uri.getPort() == server2.getLocalPort()) {
                 return ImmutableMap.of("Authentication", ImmutableList.of(basic2));
               } else {
                 return ImmutableMap.of();
@@ -693,7 +694,7 @@ public class HttpConnectorTest {
           };
       URLConnection connection =
           connector.connect(
-              new URL(String.format("http://localhost:%d", server1.getLocalPort())), authHeaders);
+              URI.create(String.format("http://localhost:%d", server1.getLocalPort())), authHeaders);
       assertThat(connection.getURL()).isEqualTo(
           new URL(String.format("http://localhost:%d/doodle.tar.gz", server2.getLocalPort())));
       try (InputStream input = connection.getInputStream()) {
