@@ -32,7 +32,6 @@ import com.google.devtools.build.lib.vfs.inmemoryfs.InMemoryFileSystem;
 import java.io.IOException;
 import java.io.StringReader;
 import java.net.URI;
-import java.net.URL;
 import java.util.Base64;
 import java.util.List;
 import java.util.Map;
@@ -49,11 +48,11 @@ public class UrlRewriterTest {
   public void byDefaultTheUrlRewriterDoesNothing() throws Exception {
     UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(""));
 
-    List<URL> urls = ImmutableList.of(new URL("http://example.com"));
-    ImmutableList<URL> amended =
-        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
+    List<URI> uris = ImmutableList.of(URI.create("http://example.com"));
+    ImmutableList<URI> amended =
+        munger.amend(uris).stream().map(url -> url.uri()).collect(toImmutableList());
 
-    assertThat(amended).isEqualTo(urls);
+    assertThat(amended).isEqualTo(uris);
   }
 
   @Test
@@ -61,15 +60,15 @@ public class UrlRewriterTest {
     String config = "block example.com";
     UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
 
-    List<URL> urls =
+    List<URI> uris =
         ImmutableList.of(
-            new URL("http://example.com"),
-            new URL("https://example.com"),
-            new URL("http://localhost"));
-    ImmutableList<URL> amended =
-        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
+            URI.create("http://example.com"),
+            URI.create("https://example.com"),
+            URI.create("http://localhost"));
+    ImmutableList<URI> amended =
+        munger.amend(uris).stream().map(url -> url.uri()).collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("http://localhost"));
+    assertThat(amended).containsExactly(URI.create("http://localhost"));
   }
 
   @Test
@@ -77,11 +76,11 @@ public class UrlRewriterTest {
     String config = "rewrite example.com/foo/(.*) mycorp.com/$1/foo";
     UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
 
-    List<URL> urls = ImmutableList.of(new URL("https://example.com/foo/bar"));
-    ImmutableList<URL> amended =
-        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
+    List<URI> uris = ImmutableList.of(URI.create("https://example.com/foo/bar"));
+    ImmutableList<URI> amended =
+        munger.amend(uris).stream().map(url -> url.uri()).collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://mycorp.com/bar/foo"));
+    assertThat(amended).containsExactly(URI.create("https://mycorp.com/bar/foo"));
   }
 
   @Test
@@ -91,13 +90,15 @@ public class UrlRewriterTest {
             + "rewrite example.com/foo/(.*) mycorp.com/$1/elsewhere";
     UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
 
-    List<URL> urls = ImmutableList.of(new URL("https://example.com/foo/bar"));
-    ImmutableList<URL> amended =
-        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
+    List<URI> uris = ImmutableList.of(URI.create("https://example.com/foo/bar"));
+    ImmutableList<URI> amended =
+        munger.amend(uris).stream().map(url -> url.uri()).collect(toImmutableList());
 
     // There's no guarantee about the ordering of the rewrites
-    assertThat(amended).contains(new URL("https://mycorp.com/bar/somewhere"));
-    assertThat(amended).contains(new URL("https://mycorp.com/bar/elsewhere"));
+    assertThat(amended)
+        .containsExactly(
+            URI.create("https://mycorp.com/bar/somewhere"),
+            URI.create("https://mycorp.com/bar/elsewhere"));
   }
 
   @Test
@@ -106,17 +107,17 @@ public class UrlRewriterTest {
 
     UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
 
-    List<URL> urls =
+    List<URI> uris =
         ImmutableList.of(
-            new URL("https://foo.com"),
-            new URL("https://example.com/foo/bar"),
-            new URL("https://subdomain.example.com/qux"));
-    ImmutableList<URL> amended =
-        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
+            URI.create("https://foo.com"),
+            URI.create("https://example.com/foo/bar"),
+            URI.create("https://subdomain.example.com/qux"));
+    ImmutableList<URI> amended =
+        munger.amend(uris).stream().map(url -> url.uri()).collect(toImmutableList());
 
     assertThat(amended)
         .containsExactly(
-            new URL("https://example.com/foo/bar"), new URL("https://subdomain.example.com/qux"));
+            URI.create("https://example.com/foo/bar"), URI.create("https://subdomain.example.com/qux"));
   }
 
   @Test
@@ -130,11 +131,11 @@ public class UrlRewriterTest {
 
     UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
 
-    List<URL> urls = ImmutableList.of(new URL("https://foo.com"), new URL("https://example.com"));
-    ImmutableList<URL> amended =
-        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
+    List<URI> uris = ImmutableList.of(URI.create("https://foo.com"), URI.create("https://example.com"));
+    ImmutableList<URI> amended =
+        munger.amend(uris).stream().map(url -> url.uri()).collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://example.com"));
+    assertThat(amended).containsExactly(URI.create("https://example.com"));
   }
 
   @Test
@@ -143,12 +144,12 @@ public class UrlRewriterTest {
 
     UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
 
-    ImmutableList<URL> amended =
-        munger.amend(ImmutableList.of(new URL("https://subdomain.example.com"))).stream()
-            .map(url -> url.url())
+    ImmutableList<URI> amended =
+        munger.amend(ImmutableList.of(URI.create("https://subdomain.example.com"))).stream()
+            .map(url -> url.uri())
             .collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://subdomain.example.com"));
+    assertThat(amended).containsExactly(URI.create("https://subdomain.example.com"));
   }
 
   @Test
@@ -157,9 +158,9 @@ public class UrlRewriterTest {
 
     UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
 
-    ImmutableList<URL> amended =
-        munger.amend(ImmutableList.of(new URL("https://subdomain.example.com"))).stream()
-            .map(url -> url.url())
+    ImmutableList<URI> amended =
+        munger.amend(ImmutableList.of(URI.create("https://subdomain.example.com"))).stream()
+            .map(url -> url.uri())
             .collect(toImmutableList());
 
     assertThat(amended).isEmpty();
@@ -171,12 +172,12 @@ public class UrlRewriterTest {
 
     UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
 
-    ImmutableList<URL> amended =
-        munger.amend(ImmutableList.of(new URL("https://subdomain.example.com"))).stream()
-            .map(url -> url.url())
+    ImmutableList<URI> amended =
+        munger.amend(ImmutableList.of(URI.create("https://subdomain.example.com"))).stream()
+            .map(url -> url.uri())
             .collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://subdomain.example.com"));
+    assertThat(amended).containsExactly(URI.create("https://subdomain.example.com"));
   }
 
   @Test
@@ -185,16 +186,16 @@ public class UrlRewriterTest {
 
     UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
 
-    List<URL> amended =
+    List<URI> amended =
         munger
             .amend(
                 ImmutableList.of(
-                    new URL("https://www.bad.com"), new URL("https://bad.com/foo/bar")))
+                    URI.create("https://www.bad.com"), URI.create("https://bad.com/foo/bar")))
             .stream()
-            .map(url -> url.url())
+            .map(url -> url.uri())
             .collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://mycorp.com/bar"));
+    assertThat(amended).containsExactly(URI.create("https://mycorp.com/bar"));
   }
 
   @Test
@@ -204,16 +205,16 @@ public class UrlRewriterTest {
 
     UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
 
-    List<URL> amended =
+    List<URI> amended =
         munger
             .amend(
                 ImmutableList.of(
-                    new URL("https://www.bad.com"), new URL("https://bad.com/foo/bar")))
+                    URI.create("https://www.bad.com"), URI.create("https://bad.com/foo/bar")))
             .stream()
-            .map(url -> url.url())
+            .map(url -> url.uri())
             .collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://mycorp.com/bar"));
+    assertThat(amended).containsExactly(URI.create("https://mycorp.com/bar"));
   }
 
   @Test
@@ -266,20 +267,20 @@ public class UrlRewriterTest {
 
     UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
 
-    List<URL> amended =
+    List<URI> amended =
         munger
             .amend(
                 ImmutableList.of(
-                    new URL("https://www.bad.com"),
-                    new URL("https://bad.com/foo/bar"),
-                    new URL("http://bad.com/bar/xyz")))
+                    URI.create("https://www.bad.com"),
+                    URI.create("https://bad.com/foo/bar"),
+                    URI.create("http://bad.com/bar/xyz")))
             .stream()
-            .map(url -> url.url())
+            .map(url -> url.uri())
             .collect(toImmutableList());
 
     assertThat(amended)
         .containsExactly(
-            new URL("http://mycorp.com/bar"), new URL("https://othercorp.com/bar/xyz"));
+            URI.create("http://mycorp.com/bar"), URI.create("https://othercorp.com/bar/xyz"));
   }
 
   @Test
@@ -313,11 +314,11 @@ public class UrlRewriterTest {
     ImmutableList<UrlRewriter.RewrittenURL> amended =
         munger.amend(
             ImmutableList.of(
-                new URL("https://my.example.com/foo/bar"),
-                new URL("https://my.example.com/from_netrc/bar"),
-                new URL("https://my.example.com/from_other_netrc_entry/bar"),
-                new URL("https://my.example.com/no_creds/bar"),
-                new URL("https://should-not-be-overridden.com/")));
+                URI.create("https://my.example.com/foo/bar"),
+                URI.create("https://my.example.com/from_netrc/bar"),
+                URI.create("https://my.example.com/from_other_netrc_entry/bar"),
+                URI.create("https://my.example.com/no_creds/bar"),
+                URI.create("https://should-not-be-overridden.com/")));
     Map<URI, Map<String, List<String>>> updatedAuthHeaders =
         munger.updateAuthHeaders(amended, ImmutableMap.of(), netrc);
 
@@ -330,23 +331,23 @@ public class UrlRewriterTest {
     // only three URLs should have auth headers
     assertThat(updatedAuthHeaders)
         .containsExactly(
-            new URI("https://user:password@mycorp.com/foo/bar"),
+            URI.create("https://user:password@mycorp.com/foo/bar"),
             ImmutableMap.of("Authorization", ImmutableList.of(expectedToken)),
-            new URI("https://mycorp.com/from_netrc/bar"),
+            URI.create("https://mycorp.com/from_netrc/bar"),
             ImmutableMap.of("Authorization", ImmutableList.of(expectedFirstNetrcToken)),
-            new URI("https://myothercorp.com/from_netrc/bar"),
+            URI.create("https://myothercorp.com/from_netrc/bar"),
             ImmutableMap.of("Authorization", ImmutableList.of(expectedSecondNetrcToken)));
     // yet all four urls should be present
     assertThat(amended)
         .containsExactly(
             UrlRewriter.RewrittenURL.create(
-                new URL("https://user:password@mycorp.com/foo/bar"), true),
-            UrlRewriter.RewrittenURL.create(new URL("https://mycorp.com/from_netrc/bar"), true),
+                URI.create("https://user:password@mycorp.com/foo/bar"), true),
+            UrlRewriter.RewrittenURL.create(URI.create("https://mycorp.com/from_netrc/bar"), true),
             UrlRewriter.RewrittenURL.create(
-                new URL("https://myothercorp.com/from_netrc/bar"), true),
-            UrlRewriter.RewrittenURL.create(new URL("https://myopencorp.com/no_creds/bar"), true),
+                URI.create("https://myothercorp.com/from_netrc/bar"), true),
+            UrlRewriter.RewrittenURL.create(URI.create("https://myopencorp.com/no_creds/bar"), true),
             UrlRewriter.RewrittenURL.create(
-                new URL("https://should-not-be-overridden.com/"), false));
+                URI.create("https://should-not-be-overridden.com/"), false));
   }
 
   @Test
